--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
-apply plugin: 'com.google.gms.google-services' // <- Add this line
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
@@ -151,6 +150,16 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
+  implementation platform('com.google.firebase:firebase-bom:33.12.0')
+
+
+  implementation 'com.google.firebase:firebase-analytics'
+
+
+  
+
+    
+
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
     def isWebpAnimatedEnabled = (findProperty('expo.webp.animated') ?: "") == "true";
@@ -175,3 +184,16 @@ dependencies {
         implementation jscFlavor
     }
 }
+plugins {
+
+  id 'com.android.application'
+
+  // Add the Google services Gradle plugin
+
+  id 'com.google.gms.google-services'
+
+ 
+
+}
+
+
