--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,11 +18,15 @@ buildscript {
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
-        classpath ('com.google.gms:google-services:4.4.2')
     }
 }
 
 apply plugin: "com.facebook.react.rootproject"
+plugins {
+    id 'com.android.application' version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false // ✅ Add this line
+}
 
 allprojects {
     repositories {
