--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -11,8 +11,7 @@
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
-# Use forward slashes for paths
-org.gradle.java.home=C\:\\Program Files\\Eclipse Adoptium\\jdk-17.0.14.7-hotspot
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -55,3 +54,5 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+expo.jsEngine=jsc
