--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
       "package": "com.jigs1188.MyNewApp",
       "runtimeVersion": "1.0.0"
     },
+    
     "web": {
       "bundler": "metro",
       "output": "static",
@@ -32,6 +33,7 @@
     },
     "plugins": [
       "expo-router",
+     
       [
         "expo-splash-screen",
         {
@@ -41,7 +43,41 @@
           "backgroundColor": "#ffffff"
         }
       ],
-      "expo-barcode-scanner"
+      [
+        "expo-barcode-scanner",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+        }
+      ],
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access camera."
+        }
+      ],
+      [
+        "expo-document-picker",
+        {
+          "documentPickerPermission": "Allow $(PRODUCT_NAME) to access documents."
+        }
+      ],
+      [
+        "expo-font",
+        {
+          "fontFamily": "Roboto"
+        }
+      ],
+      [
+        "expo-system-ui",
+        {
+          "statusBar": {
+            "barStyle": "dark-content",
+            "backgroundColor": "#ffffff"
+          }
+        }
+      ]
+      
+      
     ],
     "experiments": {
       "typedRoutes": true
